<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    tools:context=".Analyzio" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="450dp" >

        <TextView
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/under"
            android:textColor="@color/orange"
            android:textSize="25dp"
            tools:context=".Analyzio" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView0"
            android:layout_below="@+id/textView0"
            android:textColor="@color/orange"
              android:layout_marginTop="40dp"
            android:text="@string/rahul"
            android:textSize="25dp"  />
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
             android:layout_marginTop="40dp"
            android:textColor="@color/orange"
            android:text="@string/sim"
            android:textSize="25dp"  />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="40dp"
            android:text="@string/harsha"
            android:textColor="@color/orange"
            android:textSize="25dp"  />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
             android:layout_marginTop="40dp"
            android:textColor="@color/orange"
            android:text="@string/vineeth"
            android:textSize="25dp"  />
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
             android:layout_marginTop="40dp"
            android:textColor="@color/orange"
            android:text="@string/veera"
            android:textSize="25dp"  />
        

    </RelativeLayout>

</ScrollView>